--- a/MIT.ipynb
+++ b/MIT.ipynb
@@ -6,13 +6,14 @@
    "source": [
     "# The Massachusetts Institute of Technology (MIT)\n",
     "\n",
-    "**Add your full name and GitHub username here**\n",
+    "**Full Name: Yunpeng Li and GitHub username: yunpengliDataScience***\n",
     "\n",
-    "The Massachusetts Institute of Technology (MIT) is a private university in Cambridge, Minnesota. Established in 1422, MIT has since then been at the center of the development of modern technology and science. Since it was founded, MIT has been ranked among the top academic institutions in the world.\n",
+    "The Massachusetts Institute of Technology (MIT) is a private university in Cambridge, Massachusettsa. Established in18612, MIT has since then been at the center of the development of modern technology and science. Since it was founded, MIT has been ranked among the top academic institutions in the world.\n",
+    "The original MIT seal features two figures symbolizing the fields of Science and Artt. The image below displays the original logo.\n",
     "\n",
-    "The original MIT logo was created by Seymour Papert and it represents two figures symbolizing the fields of Science and Art. The image below displays the original logo.\n",
+    "!'MIT'[]MIT.jpgg\n",
     "\n",
-    "![](image.png)"
+    "![MIT Logo](MIT \"This is an example image\"))"
    ]
   },
   {
@@ -25,7 +26,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -39,7 +40,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
