--- a/MIT.ipynb
+++ b/MIT.ipynb
@@ -9,11 +9,10 @@
     "**Full Name: Yunpeng Li and GitHub username: yunpengliDataScience***\n",
     "\n",
     "The Massachusetts Institute of Technology (MIT) is a private university in Cambridge, Massachusettsa. Established in18612, MIT has since then been at the center of the development of modern technology and science. Since it was founded, MIT has been ranked among the top academic institutions in the world.\n",
-    "The original MIT seal features two figures symbolizing the fields of Science and Artt. The image below displays the original logo.\n",
+    "The original MIT seal features two figures symbolizing the fields of Science and Artt. The image below displays the original logo\n",
     "\n",
-    "!'MIT'[]MIT.jpgg\n",
     "\n",
-    "![MIT Logo](MIT \"This is an example image\"))"
+    "![MIT Logo](MIT.jpg \"This is an example image\"))"
    ]
   },
   {
